[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/FlyPatroller.gd" type="Script" id=1]
[ext_resource path="res://_src/ph_fly_patroller.png" type="Texture" id=2]
[ext_resource path="res://AI/LedgeDetector.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="FlyPatroller" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LedgeDetector" parent="." instance=ExtResource( 3 )]

[node name="FlyTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
